--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,30 @@
+applicationinsights==0.11.9
+cachetools==4.2.1
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
 Flask==1.1.2
+google-api-core==1.26.0
+google-auth==1.27.0
+googleapis-common-protos==1.53.0
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+opencensus==0.7.12
+opencensus-context==0.1.2
 opencensus-ext-azure==1.0.4
 opencensus-ext-flask==0.7.3
+packaging==20.9
+protobuf==3.15.3
+psutil==5.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==2.4.7
+pytz==2021.1
 redis==3.5.3
-opencensus==0.7.13
-opencensus-ext-logging==0.1.0
+requests==2.25.1
+rsa==4.7.2
+six==1.15.0
+urllib3==1.26.3
+Werkzeug==1.0.1
